--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3001
-DB_URL="mongodb://localhost:27017"
+DB_URL="mongodb+srv://armaansingh4886:1y3Ax9Fyo2U2Ad5r@cluster0.prbsi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET="abcdefghijklmnopqestuvwxyz"
 BASE_URL=http://localhost:3001
